# auger-templating

./: .gitmodules  CMakeLists.txt  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
CsoundTemplateHelpers/: CMakeLists.txt  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
CsoundTemplateHelpers/src/: csoundTemplateHelper.ts
CsoundTemplateHelpers/src/Cabbage/Types/: widget.ts
CsoundTemplateHelpers/src/Utility/: cssLength.ts
CsoundTemplateHelpers/unitTests/Cabbage/Types/: label.test.ts
csd/: csound-definitions.json  test-a.csd  test-a.json  test-b.csd  test-b.json  test.csd  test.csd.json  types-b.json
instr/: instr 1.orc
json/: csound-definitions.json  types-a.json  types-b.json
sco/: instr 1.sco
scripts/: build.js
src/: CMakeLists.txt  cabbageHandlebars.ts  csound.ts  csoundHandlebarsHelpers.ts
src/Cabbage/: cabbageTemplateHelper.ts  handlebars.ts
src/Cabbage/Types/: box.ts  form.ts  group.ts  label.ts  widget.ts
src/Cabbage/Utility/: layoutBuilder.ts  output.ts  typeFactory.ts  widgetFactory.ts
src/Cabbage/Widgets/: groupWidget.ts  widget.ts
src/Csound/: csoundTemplateHelper.ts
src/CsoundQt/: csoundQtTemplateHelper.ts
src/CsoundQt/Types/: box.ts  form.ts
src/Utility/: css.ts  cssFrame.ts  cssLength.ts  cssMatte.ts  cssNumber.ts  cssUnit.ts
submodules/CsoundHandlebarHelpers/: CMakeLists.txt  package-lock.json  webpack.config.js
submodules/CsoundHandlebarHelpers/scripts/: buildTemplateFiles.js
submodules/CsoundHandlebarHelpers/src/: csoundTemplateHelper.ts
submodules/CsoundTemplateHelpers/scripts/: getTypescriptFileDependencies.js
submodules/CsoundTemplateHelpers/src/Utility/: cssFrame.ts
templateHelpers/: CMakeLists.txt  jest.config.js  package-lock.json  package.json  webpack.config.js
templateHelpers/scripts/: buildTemplateFiles.js
templateHelpers/src/: cabbageTemplateHelper.ts
templateHelpers/unitTests/Utility/: cssFrame.test.ts
tests/Cabbage/Types/: box.test.js  group.test.js  label.test.js  widget.test.js  widget.test.ts
tests/Cabbage/Utility/: layoutBuilder.test.js  layoutBuilder.test.ts  widgetFactory.test.js  widgetFactory.test.ts
tests/Utility/: cssFrame.test.js  cssLength.test.js  cssLength.test.ts  cssMatte.test.js  cssNumber.test.js  cssUnit.test.js
tools/: areDependenciesGone.js  buildHandlebars.js  buildTemplateFiles.js  getTypescriptFileDependencies.js  noop.js
udo/: timeString_i.orc  timeString_k.orc  time_i.orc  time_k.orc
(+7 files in other folders)
